Fix story line height on mobile

--- a/src/components/Story/Story.scss
+++ b/src/components/Story/Story.scss
@@ -92,7 +92,11 @@
   &__description {
     font-family: $font-family-open-sans;
     font-size: 16px;
-    line-height: normal;
+    line-height: 1.5;
+
+    @include breakpoint(tablet) {
+      line-height: normal;
+    }
 
     *:first-child {
       margin-top: 0;
